--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -1,5 +1,7 @@
 \section{Publications}
 \resumePublicationListStart
+\publicationItem{Taewon Jin, Taesoo Park, In ah Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated crystal structure prediction of multi-elements random alloy using expandable features}{\textbf{Scientific Reports} published by Nature Research, 2021}
+\publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
 \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
 \publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}
 \publicationItem{Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and \textbf{Jaesik Park}}{Combinatorial 3D Shape Generation via Sequential Assembly}{Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, \textbf{NeurIPS workshop}), 2020}
