--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -1,41 +1,65 @@
 \section{Publications}
+
+
+
+International
 \resumePublicationListStart
-\publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
-\publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}
-\publicationItem{Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and \textbf{Jaesik Park}}{Combinatorial 3D Shape Generation via Sequential Assembly}{Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, \textbf{NeurIPS workshop}), 2020}
-\publicationItem{Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Fragment Relation Networks for Geometric Shape Assembly}{Learning Meets Combinatorial Algorithms (LMCA, \textbf{NeurIPS workshop}), 2020}
-\publicationItem{Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, \textbf{Jaesik Park}, Jihun Yu, and Hyunsoo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-\publicationItem{Christopher Choy, Junha Lee, Rene Ranftl, \textbf{Jaesik Park}, and Vladlen Koltun}{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-\publicationItem{Yue Wu, Rongrong Gao, \textbf{Jaesik Park}, and Qifeng Chen}{Future Video Synthesis with Object Motion Predictions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
-\publicationItem{Christopher Choy*, \textbf{Jaesik Park}*, and Vladlen Koltun}{Fully Convolutional Geometric Features}{International Conference on Computer Vision (\textbf{ICCV}), 2019}
-\publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{Global Texture Mapping for Dynamic Objects}{Pacific Graphics (\textbf{PG}), 2019}
-\publicationItem{Wei Dong, \textbf{Jaesik Park}, Yi Yang, and Michael Kaess}{GPU Accelerated Robust Scene Reconstruction}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2019}
-\publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Depth from a Light Field Image with Learning-based Matching Costs}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2019}
-\publicationItem{Maxim Tatarchenko*, \textbf{Jaesik Park}*, Vladlen Koltun, and Qian-Yi Zhou}{Tangent Convolutions for Dense Prediction in 3D}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2018}
-\publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Open3D: A Modern Library For 3D Data Processing}{Technical Report, arXiv:1801.09847, 2018}
-\publicationItem{Byungtae Ahn, Dong-Geol Choi, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Pose Estimation using Multi-task Deep Neural Network}{Robotics and Autonomous Systems (\textbf{RAS}), 2018}
-\publicationItem{\textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Colored Point Cloud Registration Revisited}{International Conference on Computer Vision (\textbf{ICCV}), 2017}
-\publicationItem{Arno Knapitsch, \textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction}{ACM Transactions on Graphics (Proc. \textbf{SIGGRAPH}), 2017}
-\publicationItem{Seong heum Kim, Yu Wing Tai, Joon Young Lee, \textbf{Jaesik Park}, and In So Kweon}{Category Specific Salient View Selection via Deep Convolutional Neural Networks}{Computer Graphics Forum (\textbf{CGF}), 2017}
-\publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Robust Multiview Photometric Stereo using Planar Mesh Parameterization}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2016}
-\publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Fast Global Registration}{European Conference on Computer Vision (\textbf{ECCV}), 2016}
-\publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{Refining Geometry from Depth Sensors using IR Shading Images}{International Journal of Computer Vision (\textbf{IJCV}), 2016}
-\publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon}{Efficient and Robust Color Consistency for Community Photo Collections}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
-\publicationItem{Hyowon Ha, Sunghoon Im, \textbf{Jaesik Park}, Hae-Gon Jeon, and In So Kweon}{High-quality Depth from Uncalibrated Small Motion Clip}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
-\publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}
-\publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}
-\publicationItem{Hyowon Ha, \textbf{Jaesik Park}, and In So Kweon}{Dense Depth and Albedo from a Single-shot Structured Light}{International Conference on 3D Vision (\textbf{3DV}), 2015}
-\publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Accurate Depth Map Estimation from a Lenslet Light Field Camera}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
-\publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
-\publicationItem{\textbf{Jaesik Park}, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling and Completion for RGB-D Cameras}{IEEE Transaction on Image Processing (\textbf{TIP}), 2014}
-\publicationItem{Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Orientation from a Monocular Camera using Deep Neural Network}{Asian Conference on Computer Vision (\textbf{ACCV}), 2014}
-\publicationItem{Jinsoo Choi, Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{GMM-based Saliency Aggregation for Calibration-free Gaze Estimation}{International Conference on Image Processing (\textbf{ICIP}), 2014}
-\publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
-\publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Calibrating a Non-isotropic Near Point Light Source using a Plane}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
-\publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}
-\publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement}{European Conference on Computer Vision (\textbf{ECCV}), 2012}
-\publicationItem{\textbf{Jaesik Park}, Joon-Young Lee, Yu-Wing Tai, and In So Kweon}{Modeling Photo Composition and Its Application to Photo Re-arrangement}{International Conference on Image Processing (\textbf{ICIP}), 2012}
-\publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In-So Kweon}{Identigram/Watermark removal using cross-channel correlation}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2012}
-\publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}
-\publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}
+    \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
+    \publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}
+    \publicationItem{Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and \textbf{Jaesik Park}}{Combinatorial 3D Shape Generation via Sequential Assembly}{Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, \textbf{NeurIPS workshop}), 2020}
+    \publicationItem{Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, \textbf{Jaesik Park}, and Minsu Cho}{Fragment Relation Networks for Geometric Shape Assembly}{Learning Meets Combinatorial Algorithms (LMCA, \textbf{NeurIPS workshop}), 2020}
+    \publicationItem{Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, \textbf{Jaesik Park}, Jihun Yu, and Hyunsoo Park}{HUMBI: A Large Multiview Dataset of Human Body Expressions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
+    \publicationItem{Christopher Choy, Junha Lee, Rene Ranftl, \textbf{Jaesik Park}, and Vladlen Koltun}{High-Dimensional Convolutional Networks for Geometric Pattern Recognition}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
+    \publicationItem{Yue Wu, Rongrong Gao, \textbf{Jaesik Park}, and Qifeng Chen}{Future Video Synthesis with Object Motion Predictions}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2020}
+    \publicationItem{Christopher Choy*, \textbf{Jaesik Park}*, and Vladlen Koltun}{Fully Convolutional Geometric Features}{International Conference on Computer Vision (\textbf{ICCV}), 2019}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{Global Texture Mapping for Dynamic Objects}{Pacific Graphics (\textbf{PG}), 2019}
+    \publicationItem{Wei Dong, \textbf{Jaesik Park}, Yi Yang, and Michael Kaess}{GPU Accelerated Robust Scene Reconstruction}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2019}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Depth from a Light Field Image with Learning-based Matching Costs}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2019}
+    \publicationItem{Maxim Tatarchenko*, \textbf{Jaesik Park}*, Vladlen Koltun, and Qian-Yi Zhou}{Tangent Convolutions for Dense Prediction in 3D}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2018}
+    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Open3D: A Modern Library For 3D Data Processing}{Technical Report, arXiv:1801.09847, 2018}
+    \publicationItem{Byungtae Ahn, Dong-Geol Choi, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Pose Estimation using Multi-task Deep Neural Network}{Robotics and Autonomous Systems (\textbf{RAS}), 2018}
+    \publicationItem{\textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Colored Point Cloud Registration Revisited}{International Conference on Computer Vision (\textbf{ICCV}), 2017}
+    \publicationItem{Arno Knapitsch, \textbf{Jaesik Park}, Qian-Yi Zhou, and Vladlen Koltun}{Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction}{ACM Transactions on Graphics (Proc. \textbf{SIGGRAPH}), 2017}
+    \publicationItem{Seong heum Kim, Yu Wing Tai, Joon Young Lee, \textbf{Jaesik Park}, and In So Kweon}{Category Specific Salient View Selection via Deep Convolutional Neural Networks}{Computer Graphics Forum (\textbf{CGF}), 2017}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Robust Multiview Photometric Stereo using Planar Mesh Parameterization}{IEEE Transactions on Pattern Analysis and Machine Intelligence (\textbf{TPAMI}), 2016}
+    \publicationItem{Qian-Yi Zhou, \textbf{Jaesik Park}, and Vladlen Koltun}{Fast Global Registration}{European Conference on Computer Vision (\textbf{ECCV}), 2016}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{Refining Geometry from Depth Sensors using IR Shading Images}{International Journal of Computer Vision (\textbf{IJCV}), 2016}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon}{Efficient and Robust Color Consistency for Community Photo Collections}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
+    \publicationItem{Hyowon Ha, Sunghoon Im, \textbf{Jaesik Park}, Hae-Gon Jeon, and In So Kweon}{High-quality Depth from Uncalibrated Small Motion Clip}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2016}
+    \publicationItem{Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, \textbf{Jaesik Park}, Jun Ho Oh, and In So Kweon}{Vision System and Depth Processing for DRC-HUBO+}{IEEE International Conference on Robotics and Automation (\textbf{ICRA}), 2016}
+    \publicationItem{Seong-Heum Kim, Yu-Wing Tai, \textbf{Jaesik Park}, and In So Kweon}{Multi-view Object Extraction with Fractional Boundaries}{IEEE Transaction on Image Processing (\textbf{TIP}), 2016}
+    \publicationItem{Hyowon Ha, \textbf{Jaesik Park}, and In So Kweon}{Dense Depth and Albedo from a Single-shot Structured Light}{International Conference on 3D Vision (\textbf{3DV}), 2015}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{Accurate Depth Map Estimation from a Lenslet Light Field Camera}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2015}
+    \publicationItem{\textbf{Jaesik Park}, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling and Completion for RGB-D Cameras}{IEEE Transaction on Image Processing (\textbf{TIP}), 2014}
+    \publicationItem{Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{Real-time Head Orientation from a Monocular Camera using Deep Neural Network}{Asian Conference on Computer Vision (\textbf{ACCV}), 2014}
+    \publicationItem{Jinsoo Choi, Byungtae Ahn, \textbf{Jaesik Park}, and In So Kweon}{GMM-based Saliency Aggregation for Calibration-free Gaze Estimation}{International Conference on Image Processing (\textbf{ICIP}), 2014}
+    \publicationItem{Gyeongmin Choe*, \textbf{Jaesik Park}*, Yu-Wing Tai, and In So Kweon}{Exploiting Shading Cues in Kinect IR Images for Geometry Refinement}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Calibrating a Non-isotropic Near Point Light Source using a Plane}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2014}
+    \publicationItem{\textbf{Jaesik Park}, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon}{Multiview Photometric Stereo using Planar Mesh Parameterization}{International Conference on Computer Vision (\textbf{ICCV}), 2013}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement}{European Conference on Computer Vision (\textbf{ECCV}), 2012}
+    \publicationItem{\textbf{Jaesik Park}, Joon-Young Lee, Yu-Wing Tai, and In So Kweon}{Modeling Photo Composition and Its Application to Photo Re-arrangement}{International Conference on Image Processing (\textbf{ICIP}), 2012}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In-So Kweon}{Identigram/Watermark removal using cross-channel correlation}{Conference on Computer Vision and Pattern Recognition (\textbf{CVPR}), 2012}
+    \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}
+    \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}
 \resumePublicationListEnd
+
+
+
+Domestic
+\resumePublicationListStart
+    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}
+    \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{마이크로 렌즈 기반의 휴대용 라이트필드 카메라를 이용한 정확한 깊이 정보 추정방법}{한국멀티미디어학회 춘계학술발표대회, May 2015}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Hyowon Ha, and In So Kweon}{키넥트 깊이 정밀도 개선을 위한 적외선 패턴 영상의 스테레오 정합}{2013년도 한국 멀티미디어 학회 춘계학술 발표대회 논문집 제 16권 1호, May, 2013}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{다시점 영상기반 3차원 움직임 추정기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{컬러 영상의 홀로그램 및 워터마크 제거 기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+\resumePublicationListEnd
+
+
+
