--- a/cv.tex
+++ b/cv.tex
@@ -153,6 +153,10 @@
 
   
 \section{Publications}
+
+
+
+International
 \resumePublicationListStart
 \publicationItem{Taewon Jin, Taesoo Park, In ah Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated crystal structure prediction of multi-elements random alloy using expandable features}{\textbf{Scientific Reports} published by Nature Research, 2021}
 \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
@@ -195,30 +199,120 @@
 \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}
 \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}
 \resumePublicationListEnd
-\section{Awards}
+
+
+
+Domestic
+\resumePublicationListStart
+    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}
+    \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{마이크로 렌즈 기반의 휴대용 라이트필드 카메라를 이용한 정확한 깊이 정보 추정방법}{한국멀티미디어학회 춘계학술발표대회, May 2015}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Hyowon Ha, and In So Kweon}{키넥트 깊이 정밀도 개선을 위한 적외선 패턴 영상의 스테레오 정합}{2013년도 한국 멀티미디어 학회 춘계학술 발표대회 논문집 제 16권 1호, May, 2013}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{다시점 영상기반 3차원 움직임 추정기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{컬러 영상의 홀로그램 및 워터마크 제거 기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+\resumePublicationListEnd
+
+
+
+\section{Program Committee}
 \resumeItemListStart
-\resumeItem{Faculty Support Program, Intel Corporation, June 2020}
-\resumeItem{Outstanding Online Class Award, Awarded to five classes among ~170 classes, July 2020}
-\resumeItem{Google Season of Docs, Google Corporation, Technical writer support for Open3D, Apr. 2019}
-\resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Sep. 2019}
-\resumeItem{Research Velocity Challenge Award, Intel Corporation, Dec. 2018}
-\resumeItem{Depth estimation challenge: robustness champion, CVPR workshop on Light Fields for Computer Vision, July 2017}
-\resumeItem{Qualcomm Innovation Award, Qualcomm Korea Corp. and KAIST, March 2016}
-\resumeItem{CVPR 2015 Doctoral Consortium, IEEE CVPR, Apr. 2016}
-\resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2016}
-\resumeItem{Best Paper Award, Korea Multimedia Society, 2015 Spring Annual Conference, May 2016}
-\resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2015}
-\resumeItem{19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp., Feb. 2013}
-\resumeItem{Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013}
-\resumeItem{Bronze Prize, Samsung Techwin research center conference, Feb. 2012}
-\resumeItem{Excellent Intern Award, Microsoft Research Asia, Dec. 2012}
-\resumeItem{Microsoft Research Asia Fellowship, Microsoft, Awarded to 11 Ph.D. students in the top Asian universities., Nov. 2011}
-\resumeItem{Summa cum laude, Hanyang University, Feb. 2009}
-\resumeItem{Full Scholarship, Jeongsu scholarship foundation, Aug. 2006}
-\resumeItem{Scholarship for Selected Undergraduate Students, The Korea Foundation for Advanced Studies (KFAS), June 2006}
-\resumeItem{Full scholarship, Hanyang University, Aug. 2005}
+    \resumeItem{Area Chair, Machine Vision Applications (MVA) conference,  2021}
+    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
+    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2021}
+    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2021}
+    \resumeItem{Senior Program Committee, Int. Joint Conf. on Artificial Intelligence (IJCAI),  2021}
+    \resumeItem{Senior Program Committee, American Assoc. for Artificial Intelligence (AAAI),  2021}
+    \resumeItem{Area Chair, International Conference on Computer Vision and Pattern Recognition (CVPR),  2020}
+    \resumeItem{Area Chair, International Conference on Computer Vision (ICCV),  2019}
+    \resumeItem{Session Chair, International Conference on Computer Vision (ICCV),  2019}
 \resumeItemListEnd
 
 
+
+\section{Awards}
+\resumeItemListStart
+    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Dec. 2020}
+    \resumeItem{Faculty Support Program, Intel Corporation, June 2020}
+    \resumeItem{Outstanding Online Class Award, Awarded to five classes among ~170 classes, July 2020}
+    \resumeItem{Google Season of Docs, Google Corporation, Technical writer support for Open3D, Apr. 2019}
+    \resumeItem{Qualcomm Gift Grant, Qualcomm Corporation, Sep. 2019}
+    \resumeItem{Research Velocity Challenge Award, Intel Corporation, Dec. 2018}
+    \resumeItem{Depth estimation challenge: robustness champion, CVPR workshop on Light Fields for Computer Vision, July 2017}
+    \resumeItem{Qualcomm Innovation Award, Qualcomm Korea Corp. and KAIST, March 2016}
+    \resumeItem{CVPR 2015 Doctoral Consortium, IEEE CVPR, Apr. 2016}
+    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2016}
+    \resumeItem{Best Paper Award, Korea Multimedia Society, 2015 Spring Annual Conference, May 2016}
+    \resumeItem{Honor Prize, KAIST, Annual Ph.D. Research Progress Evaluation, May 2015}
+    \resumeItem{19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp., Feb. 2013}
+    \resumeItem{Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013}
+    \resumeItem{Bronze Prize, Samsung Techwin research center conference, Feb. 2012}
+    \resumeItem{Excellent Intern Award, Microsoft Research Asia, Dec. 2012}
+    \resumeItem{Microsoft Research Asia Fellowship, Microsoft, Awarded to 11 Ph.D. students in the top Asian universities., Nov. 2011}
+    \resumeItem{Summa cum laude, Hanyang University, Feb. 2009}
+    \resumeItem{Full Scholarship, Jeongsu scholarship foundation, Aug. 2006}
+    \resumeItem{Scholarship for Selected Undergraduate Students, The Korea Foundation for Advanced Studies (KFAS), June 2006}
+    \resumeItem{Full scholarship, Hanyang University, Aug. 2005}
+\resumeItemListEnd
+
+
+
+\section{Patents}
+\resumeItemListStart
+    \resumeItem{Tangent Convolutions for 3D Data, US10572770B2, (Application granted), }
+    \resumeItem{깊이 정보 획득 장치 및 깊이 정보 획득 방법 (Depth Map Acquisition Device And Depth Map Acquisition Method), Patent No. 1018520850000, Republic of Korea, (Application granted), }
+    \resumeItem{삼차원 영상 정보 획득 방법 및 이를 구현한 컴퓨팅 장치 (Method For Acquiring Three Dimensional Image Information, And Computing Device Implementing The Same Method), Patent No. 1017652570000, Republic of Korea (Application granted), }
+    \resumeItem{전경 추출 방법 및 장치 (Foreground Area Extracting Method and Apparatus), Patent No. 10-2015-0084331, Republic of Korea., }
+    \resumeItem{다중 객체 추적 방법 및 이를 위한 장치 (Method Of Tracking Multiple Objects And Apparatus For The Same), Patent No. 10-2015-0070569, Republic of Korea, }
+    \resumeItem{깊이 센서와 적외선 음영 영상을 이용한 고품질 3차원 정보 획득 장치 및 방법 (Device and method for obtaining accurate 3D information using depth sensor and infrared shading cues), Patent No. 1017079390000, Republic of Korea. (Application granted), }
+    \resumeItem{가려짐이 있는 환경에서 이동표적의 위치를 추정하는 방법 (Method for Estimating Location of Moving Target in Occluded Tracking Environment), Patent No. 1012883880000, Republic of Korea. (Application granted), }
+    \resumeItem{컬러 이미지의 채널간 상관관계를 이용하는 워터마크 제거 방법 (Method for removing watermark using cross-channel correlation of color image), Patent No. 1013952840000, Republic of Korea. (Application granted), }
+\resumeItemListEnd
+
+
+
+\section{Teaching}
+\resumeItemListStart
+    \resumeItem{AIGS101 Artifical Intelligence Basis I, Spring,  2021}
+    \resumeItem{CSED538/AIGS538 Deep learning, Spring,  2021}
+    \resumeItem{AIGS101, Artifical Intelligence Basis II, Fall,  2020}
+    \resumeItem{CSED100, Introduction to Computer Science Engineering, Fall,  2020}
+    \resumeItem{CSED703F, 3D Vision, Fall,  2020}
+    \resumeItem{CSED800/AIGS800, CSE/GSAI Colloquium, Fall,  2020}
+    \resumeItem{AIGS101, Artifical Intelligence Basis I, Spring,  2020}
+    \resumeItem{AIGS537/CSED537, Artificial Intelligence and Data Science, 2020 Spring, Spring,  2020}
+    \resumeItem{CSED233, Data Structure, Spring, (Awarded as the outstanding online class),  2020}
+    \resumeItem{CSED703F-01 3D Vision, Fall,  2019}
+\resumeItemListEnd
+
+
+
+\section{Talks}
+\resumeItemListStart
+    \resumeItem{3D Representations and Detections, Chungbuk University, Chungju, Republic of Korea, Jan. 2021}
+    \resumeItem{Introduction to Computer Vision, Kyungbuk Science High School, Pohang, Republic of Korea, Aug. 2020}
+    \resumeItem{High-Dimensional Convolutional Networks for Geometric Pattern Recognition, KCCV 2020, Seoul, Republic of Korea, Aug. 2020}
+    \resumeItem{Object Detection from Images or Point Clouds, LG Electronics, Seoul, Republic of Korea, Aug. 2020}
+    \resumeItem{Fully Convolutional Geometric Features, Koh Young Technology, Yongin, Republic of Korea, Dec. 2019}
+    \resumeItem{Open3D Tutorial and Fully Convolutional Geometric Features, Korea Electronics Technology Institute, Seongnam, Republic of Korea, Nov. 2019}
+    \resumeItem{Introduction to Computer Vision and Deep Learning, Daegu Science High School, Daegu, Republic of Korea, Aug. 2019}
+    \resumeItem{3D Computer Vision and Open3D, International Conference on Machine Vision Applications, Tokyo, Japan, May 2019}
+    \resumeItem{3D Computer Vision and Open3D, Qualcomm Head Quater, San Diego, USA, June 2019}
+    \resumeItem{3D reconstruction using Open3D, Minneapolis, University of Minnesota, invited lecture for Multiview 3D Geometry in Computer Vision (CSCI 5980) Class, Apr. 2018}
+    \resumeItem{3D reconstruction using Open3D, Forma Technology (a startup company at Bay Area), San Francisco, USA, March 2018}
+\resumeItemListEnd
+
+
+
+
+
+\section{Reference}
+\resumeItemListStart
+\resumeItem{Up on request.}
+\resumeItemListEnd
 
 \end{document}
