--- a/source/latex/publication.tex
+++ b/source/latex/publication.tex
@@ -1,4 +1,8 @@
 \section{Publications}
+
+
+
+International
 \resumePublicationListStart
 \publicationItem{Taewon Jin, Taesoo Park, In ah Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated crystal structure prediction of multi-elements random alloy using expandable features}{\textbf{Scientific Reports} published by Nature Research, 2021}
 \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
@@ -41,3 +45,23 @@
 \publicationItem{Jiyoung Jung, Yekeun Jeong, \textbf{Jaesik Park}, Hyowon Ha, J. D. Kim, and In-So Kweon}{A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System}{IEEE/RSJ International Conference on Intelligent Robots and Systems (\textbf{IROS}), 2011}
 \publicationItem{\textbf{Jaesik Park}*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon}{High Quality Depth Map Upsampling for 3D-TOF Cameras}{International Conference on Computer Vision (\textbf{ICCV}), 2011}
 \resumePublicationListEnd
+
+
+
+Domestic
+\resumePublicationListStart
+    \publicationItem{Junha Lee, Seungwook Kim, Minsu Cho, and \textbf{Jaesik Park}}{계층적 허프 변환을 통한 포인트 클라우드 정합}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunsoo Chung, Jungtaek Kim, Jinhwi Lee, \textbf{Jaesik Park}, and Minsu Cho}{강화학습을 이용한 그래프 표현 기반의 3차원 물체 생성}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Hyunmin Lee and \textbf{Jaesik Park}}{일관된 비디오 뎁스 맵 추정을 위한 시간 어텐션 모듈}{제 33회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2021}
+    \publicationItem{Jungeon Kim, Hyomin Kim, \textbf{Jaesik Park}, and Seungyong Lee}{동적 객체에 대한 전역 텍스쳐 맵 생성}{제 32회 영상처리 및 이해에 관한 워크샵 (IPIU), Feb 2020}
+    \publicationItem{Min-Hyun Kim, \textbf{Jaesik Park}, and In So Kweon}{깊이 영상 처리를 위한 학습기반 신뢰도 추정 및 재질 분류}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Junsik Kim, Kyungdon Joo, Tae-Hyun Oh, \textbf{Jaesik Park}, and In So Kweon}{시야 공유가 없는 다중 카메라를 이용한 사람 추적}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{SoonMin Hwang, \textbf{Jaesik Park}, Namil Kim, Yukyung Choi, and In So Kweon}{컬러-열영상 퓨전을 통한 강인한 보행자 검출 기법}{제 27회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{Hae-Gon Jeon, \textbf{Jaesik Park}, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon}{마이크로 렌즈 기반의 휴대용 라이트필드 카메라를 이용한 정확한 깊이 정보 추정방법}{한국멀티미디어학회 춘계학술발표대회, May 2015}
+    \publicationItem{Gyeongmin Choe, \textbf{Jaesik Park}, Hyowon Ha, and In So Kweon}{키넥트 깊이 정밀도 개선을 위한 적외선 패턴 영상의 스테레오 정합}{2013년도 한국 멀티미디어 학회 춘계학술 발표대회 논문집 제 16권 1호, May, 2013}
+    \publicationItem{\textbf{Jaesik Park}, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon}{다시점 영상기반 3차원 움직임 추정기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+    \publicationItem{\textbf{Jaesik Park}, Yu-Wing Tai, and In So Kweon}{컬러 영상의 홀로그램 및 워터마크 제거 기법}{제 25회 영상처리 및 이해에 관한 워크샵 (IPIU)}
+\resumePublicationListEnd
+
+
+
