revise paper name

--- a/cv.tex
+++ b/cv.tex
@@ -158,7 +158,7 @@
 
 International
 \resumePublicationListStart
-    \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated crystal structure prediction of multi-elements random alloy using expandable features}{\textbf{Scientific Reports} published by Nature Research, 2021}
+    \publicationItem{Taewon Jin, Taesoo Park, Ina Park, \textbf{Jaesik Park}, and Ji Hoon Shim}{Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features}{\textbf{Scientific Reports} published by Nature Research, 2021}
     \publicationItem{Hyomin Kim, Jungeon Kim, Hyeonseo Nam, \textbf{Jaesik Park}, and Seungyong Lee}{Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera}{42nd Annual Conference of the European Association for Computer Graphics (\textbf{EuroGraphics}), 2021}
     \publicationItem{Jinsoo Choi, \textbf{Jaesik Park}, and In So Kweon}{High-quality Frame Interpolation via Tridirectional Inference}{Winter Conference on Applications of Computer Vision (\textbf{WACV}), 2021}
     \publicationItem{Minguk Kang and \textbf{Jaesik Park}}{ContraGAN: Contrastive Learning for Conditional Image Generation}{Conference on Neural Information Processing Systems (\textbf{NeurIPS}), 2020}
